added Context and migrations

--- a/src/API/Guider.WebApi/appsettings.Development.json
+++ b/src/API/Guider.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=.;Initial Catalog=GuiderDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   }
 }
