--- a/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
+++ b/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Guider.Domain\Guider.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
