--- a/src/Core/Guider.Application/Guider.Application.csproj
+++ b/src/Core/Guider.Application/Guider.Application.csproj
@@ -19,7 +19,12 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="UseCases\" />
+    <Folder Include="UseCases\client\Command\CreateClient\" />
+    <Folder Include="UseCases\client\Command\DeleteClient\" />
+    <Folder Include="UseCases\client\Command\UpdateClient\" />
+    <Folder Include="UseCases\consultant\Command\CreateConsultant\" />
+    <Folder Include="UseCases\consultant\Command\DeleteConsultant\" />
+    <Folder Include="UseCases\consultant\Command\UpdateConsultant\" />
   </ItemGroup>
 
 </Project>
