--- a/src/Core/Guider.Application/Guider.Application.csproj
+++ b/src/Core/Guider.Application/Guider.Application.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="UseCases\" />
+    <Folder Include="UseCases\User\" />
   </ItemGroup>
 
 </Project>
