setup identity configuration

--- a/src/API/Guider.WebApi/Guider.WebApi.csproj
+++ b/src/API/Guider.WebApi/Guider.WebApi.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Guider.Application\Guider.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Guider.Identity\Guider.Identity.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Guider.Persistence\Guider.Persistence.csproj" />
   </ItemGroup>
 
