--- a/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
+++ b/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
@@ -16,6 +16,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Guider.Domain\Guider.Domain.csproj" />
+    <ProjectReference Include="..\Guider.Identity\Guider.Identity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
