Search&Sort&Pagination

--- a/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
+++ b/src/Infrastructure/Guider.Persistence/Guider.Persistence.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Guider.Application\Guider.Application.csproj" />
     <ProjectReference Include="..\..\Core\Guider.Domain\Guider.Domain.csproj" />
     <ProjectReference Include="..\Guider.Identity\Guider.Identity.csproj" />
   </ItemGroup>
