--- a/src/API/Guider.WebApi/Guider.WebApi.csproj
+++ b/src/API/Guider.WebApi/Guider.WebApi.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Guider.Identity\Guider.Identity.csproj" />
+    <ProjectReference Include="..\..\..\Guider.Infrastructure\Guider.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Core\Guider.Application\Guider.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Guider.Persistence\Guider.Persistence.csproj" />
   </ItemGroup>
