--- a/src/API/Guider.WebApi/appsettings.json
+++ b/src/API/Guider.WebApi/appsettings.json
@@ -24,5 +24,8 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DummyKeyDumDumDummyKeyDumDumDummyKeyDumDumDummyKeyDumDum"
+  }
 }
