add login handler

--- a/src/Infrastructure/Guider.Identity/Guider.Identity.csproj
+++ b/src/Infrastructure/Guider.Identity/Guider.Identity.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Guider.Application\Guider.Application.csproj" />
+  </ItemGroup>
+
 </Project>
