--- a/src/API/Guider.WebApi/appsettings.Development.json
+++ b/src/API/Guider.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DevConnection": "Data Source=.;Initial Catalog=GuiderDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "DevConnection": "Data Source=DESKTOP-C64N1LO\\MSSQLSERVER01;Initial Catalog=GuiderDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   }
 }
