--- a/src/Core/Guider.Application/Guider.Application.csproj
+++ b/src/Core/Guider.Application/Guider.Application.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="FluentValidation" Version="11.9.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Stripe.net" Version="44.12.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="UseCases\Transactions\Query\" />
   </ItemGroup>
 
 </Project>
