--- a/src/API/Guider.WebApi/Guider.WebApi.csproj
+++ b/src/API/Guider.WebApi/Guider.WebApi.csproj
@@ -28,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Images\client\" />
+    <Folder Include="wwwroot\Images\consultant\" />
   </ItemGroup>
 
 </Project>
