--- a/src/API/Guider.WebApi/appsettings.Development.json
+++ b/src/API/Guider.WebApi/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DevConnection": "Data Source=.;Initial Catalog=GuiderDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "DevConnection": "Data Source=.;Initial Catalog=GuiderDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True",
+    "HangfireConnection": "Data Source=.;Initial Catalog=HangfireDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   }
 }
