--- a/src/Infrastructure/Guider.Infrastructure/Guider.Infrastructure.csproj
+++ b/src/Infrastructure/Guider.Infrastructure/Guider.Infrastructure.csproj
@@ -14,5 +14,10 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.14" />
+	</ItemGroup>
 
 </Project>
