--- a/src/API/Guider.WebApi/Guider.WebApi.csproj
+++ b/src/API/Guider.WebApi/Guider.WebApi.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\ConsultantAttachments\" />
   </ItemGroup>
 
 </Project>
