--- a/src/Infrastructure/Guider.Infrastructure/Guider.Infrastructure.csproj
+++ b/src/Infrastructure/Guider.Infrastructure/Guider.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Guider.Application\Guider.Application.csproj" />
     <ProjectReference Include="..\Guider.Identity\Guider.Identity.csproj" />
+    <ProjectReference Include="..\Guider.Persistence\Guider.Persistence.csproj" />
   </ItemGroup>
 	
 	<ItemGroup>
